[tool.poetry]
name = "err-backend-matrix"
version = "0.1.0"
description = ""
authors = ["wilypomegranate <wilypomegranate@users.noreply.github.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
